--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="company-name">Luke Penney Bsc.</div>
+        <div class="company-name">Luke Penney, Bsc.</div>
         <nav>
             <a href="about.html" target="_blank">About</a>
             <a href="LukePenneyResume.pdf" target="_blank">Resume</a>
