--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h2 id="job-title">Software Engineer / Full Stack Developer</h2>
             </div>
             <p class="writeup">Hi my name is Luke Penney and thank you for checking out my webpage!
-                I am a recent graduate from the Memorial University who loves to learn new thinks and work on exciting new projects.
+                I am a recent graduate from the Memorial University of Newfoundland who loves to learn new thinks and work on exciting new projects.
                 I love hard work and being part of a team, making me a great fit for any endeavor! Check out my work expirience and some of the projects
                 I have done over the years!
             </p>
