--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
         </section>
         <section>
-            <h1 class="project-head">Here Are some of My Projects:</h1>
+            <h1 class="project-head">Here are some of My Projects:</h1>
         </section>
 
         <section id="Projects">
