--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <li class="text-white text-lg">Fully functional bot that plays the protoss race in StarCraft Broodwar </li>
                         <li class="text-white text-lg">Application utilizes BWAPI along with modern AI methods such as Reinforcement Learning and Heuristics</li>
                         <li class="text-white text-lg">The bot is highly effective against the zerg race and prevent zergling rushes</li>
-                        <li class="text-white text-lg">Here is the link to a trailer showcasing performance <a class="bot-link" href="https://www.youtube.com/watch?v=ZcWaFDrgoC0&list=PL_xRyXins849F8QIw5s1ID8FOR2cdPMzH">https://www.youtube.com/watch?v=ZcWaFDrgoC0&list=PL_xRyXins849F8QIw5s1ID8FOR2cdPMzH</a></li>
+                        <li class="text-white text-lg">Here is the link to a trailer showcasing performance <a class="bot-link" href="https://www.youtube.com/watch?v=ZcWaFDrgoC0&list=PL_xRyXins849F8QIw5s1ID8FOR2cdPMzH">Starcraft Trailer</a></li>
                     </ul>
                     <p class="text-lg font-code text-[#f87b1b] pb-3">C++  Visual Studio 2019  Broodwar API(BWAPI)  Reinforcement Learning  Heuristics </p>
                     <div>
