--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="company-name">Luke Penney Bsc.</div>
+        <div class="company-name">Luke Penney, Bsc.</div>
         <nav>
             <a href="about.html" target="_blank">About</a>
             <a href="Luke Penney resume.pdf" target="_blank">Resume</a>
@@ -33,7 +33,7 @@
     <div id="main">
         <header>
             <div class="info">
-                <h1 id="name">Luke Penney Bsc.</h1>
+                <h1 id="name">Luke Penney, Bsc.</h1>
                 <h2 id="job-title">Software Engineer / Full Stack Developer</h2>
             </div>
             <p class="writeup">Hi my name is Luke Penney and thank you for checking out my webpage!
