--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </header>
         <section>
             <div id="work-expirience">
-                <h1 class="head-work">Work Expirience</h1>
+                <h1 class="head-work">Work Experience</h1>
                 <a href="https://inspection.canada.ca/eng/1297964599443/1297965645317" target="_blank"><img src="Canadian-food-inspection-agency.png" alt="img" width="120" height="80"></a>
                 <a href="http://www.vaclab.ca/" target="_blank"><img src="logo-wl.png" alt="img" width="120" height="80"></a>
                 <a href="https://orangestore.ca/" target="_blank"><img src="north-atlantic-logo.png" alt="img" width="120" height="80"></a>
